# alphab.mono.repo

./: .editorconfig  .env.example  .gitignore  CRITICAL_IMPROVEMENTS_PLAN.md  README.md  cspell.json  migrate-naming-conventions.sh  migrate-to-packages.sh  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  tsconfig.json  turbo.json  verify-migration.sh
.cursor/rules/: devplan_flow.mdc  devplan_insights.mdc  devplan_repo_overview.mdc  devplan_rules.mdc
.github/workflows/: ci.yml  deploy.yml
.turbo/cache/: 0b4a3d3ffccb84bd-meta.json  (+3 more)
DOCS/: ARCHITECTURE.md  AUTH.md  AUTHENTICATION.md  AUTH_REFACTORING.md  CODE_REVIEW_2025.md  COMPREHENSIVE_CODEBASE_REVIEW.md  DEPENDENCY_SIMPLIFICATION_GUIDE.md  DEVELOPMENT.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS.md  INIT_PROJECT_POC_Prompt.md  MIGRATION_GUIDE.md  NAMING_CONVENTIONS_STRATEGY.md  POC.md  README_DOCS.md  TESTING_STRATEGY.md  TURBOREPO_MIGRATION.md  alphab-env-config.md  feature_generation_plan.md  mvp_user_stories.md  supabase.md
_supabase/: config.toml
backend/: .env.example  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  vercel.json
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  example.py  health.py
backend/app/core/: auth.py  config.py
backend/app/tests/: test_auth.py  test_auth_simple.py
backend/tests/: test_health.py
frontend/: .env.example  .eslintrc.json  README.md  components.json  package.json  vercel.json  vite.config.ts
scripts/: get-gallery-images.mjs  setup-database.sh
(+116 files in other folders)
